--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hola que tal mi gente</h1>
         <h2>Pruebita 2</h2>
             <p>
-                poronga
+                porongota
             </p>
 </body>
 </html>
